src/objects/inscor__Company__c.object
<CustomObject>
    <fields>
        <fullName>inscor__PartsBase_Inv_File_Additional_Fields__c</fullName>
        <label>PartsBase Inv File Additional Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__PartsBase_RFQ_Pull_Schedule__c</fullName>
        <label>PartsBase RFQ Pull Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Every 15 Min</fullName>
                </value>
                <value>
                    <fullName>Every Half Hour</fullName>
                </value>
                <value>
                    <fullName>Every Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Partsbase_Schedule__c</fullName>
        <label>Partsbase Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>inscor__Price_Held_Firm_Time__c</fullName>
        <inlineHelpText>Price Held Firm Time (in days)</inlineHelpText>
        <label>Price Held Firm Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Receiving_TechData_Fields__c</fullName>
        <label>Receiving TechData Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__SO_Tracking_Default_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SO Tracking Default Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Freight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Freight</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Companies (Shipping Freight)</relationshipLabel>
        <relationshipName>Companies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Show_Conversion_Tag_Agency_in_Receiving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Conversion Tag Agency in Receiving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Show_PN_Comments_on_PR__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show PN Comments on PR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Show_Receiving_Barcode_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Receiving Barcode Feature?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Stock_IQ_Schedule__c</fullName>
        <label>Stock IQ Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Use_Conversion_Tag_Agency_on_Certs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Conversion Tag Agency on Certs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Vouchering_Variance_Increases_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Variance limits are normally for both increases and reductions, apply this setting if only increases should be validated and reduced invoices are allowed at any level.</inlineHelpText>
        <label>Vouchering Variance-Increases Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Vouchering_Variance_Maximum_Amount__c</fullName>
        <inlineHelpText>Enter the maximum allowed total variance allowed by accounting for a PO or RO vendor invoice. Vouchering an invoice of a different amount is limited to the lesser of the maximum percentage or the maximum amount.</inlineHelpText>
        <label>Vouchering Variance-Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Vouchering_Variance_Maximum__c</fullName>
        <inlineHelpText>Enter the maximum amount calculated by percentage of the total being paid for a PO or RO vendor invoice. Vouchering an invoice of a different amount is limited to the lesser of the maximum percentage or the maximum amount.</inlineHelpText>
        <label>Vouchering Variance-Maximum %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__header_color__c</fullName>
        <inlineHelpText>Use Hex Code for the background color to be used on the forms.</inlineHelpText>
        <label>Header Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscoras__Auto_Post__c</fullName>
        <label>Auto Post</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billings</fullName>
                </value>
                <value>
                    <fullName>Journal Entries</fullName>
                </value>
                <value>
                    <fullName>Payables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscoras__Default_GL_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Default_GL_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Companies (Default GL Variable 2)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Default_GL_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Companies (Default GL Variable 3)</relationshipLabel>
        <relationshipName>Companies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Default_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All_Companies</fullName>
        <columns>NAME</columns>
        <columns>inscor__Company_Name__c</columns>
        <columns>inscor__Address_1__c</columns>
        <columns>inscor__City__c</columns>
        <columns>inscor__State__c</columns>
        <columns>inscor__Zip_Code__c</columns>
        <columns>inscor__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Company_Name__c</columns>
        <columns>inscor__Address_1__c</columns>
        <columns>inscor__City__c</columns>
        <columns>inscor__State__c</columns>
        <columns>inscor__Zip_Code__c</columns>
        <columns>inscor__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CID-{0}</displayFormat>
        <label>Company ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Allow_Vouchering_Variance_Increases_Only</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Vouchering_Variance_Increases_Only__c == true &amp;&amp; (  ISBLANK(inscor__Vouchering_Variance_Maximum__c) ||  ISBLANK(inscor__Vouchering_Variance_Maximum_Amount__c))</errorConditionFormula>
        <errorDisplayField>inscor__Vouchering_Variance_Increases_Only__c</errorDisplayField>
        <errorMessage>“Vouchering Variance-Increases Only?” is only allowed when “Vouchering Variance-Maximum %” and “Vouchering Variance-Maximum Amount” entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Keep_Last_x_Days_of_TAs_must_be_gt_30</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Number_of_days__c &lt; 30</errorConditionFormula>
        <errorDisplayField>inscor__Number_of_days__c</errorDisplayField>
        <errorMessage>Cancel Shipment needs TA records to exist to create the offsetting records so we can never delete recent records</errorMessage>
    </validationRules>
</CustomObject>